fix overflow index

--- a/videos.css
+++ b/videos.css
@@ -29,7 +29,7 @@ nav {
   align-items: center;
   min-height: 8vh;
   font-family: "Poppins", sans-serif;
-  background-color: #064635;
+  background-color: var(--primary-color);
   height: 5rem;
 }
 
